--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div class="service-list">
                 <div class="service">
                     <ul>
-                        <li>THE TRADITIONAL HAIRCUT</li>
+                        <li>The Traditional Haircut</li>
                         <li>A Wash And Cut</li>
                         <li>Haircut For The Older Gent</li>
                         <li>Zero Fades</li>
